--- a/app/views/investigations/pdf_ongoing_survey.html.erb
+++ b/app/views/investigations/pdf_ongoing_survey.html.erb
@@ -1,4 +1,5 @@
 <div class="book">
+  <%= render 'investigations/pages/common_css' %>  
   <%= render 'investigations/pages/hyoshi', survey_type: '事中' %>
   <%= render 'investigations/pages/ongoing/chosahokokusyo' %>
   <!-- コメントアウト -->
@@ -9,136 +10,9 @@
   <% end %>
   <!-- コメントアウト -->
   <%= render 'investigations/pages/tatemonochosaichiranhyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>
+  <%= render 'investigations/pages/hyoshi_resident', survey_type: '事中' %>
   <%= render 'investigations/pages/kaokuchosasyodakusyo', survey_type: '事中' %>
-  <%= render 'investigations/pages/tatemonosuijyunsokuryokekkahyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>
+  <%= render 'investigations/pages/sonsyochosasyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>  
   <%= render 'investigations/pages/tatemonokeisyasokuteikekkahyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>
-  <%= render 'investigations/pages/sonsyochosasyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>
+  <%= render 'investigations/pages/tatemonosuijyunsokuryokekkahyo', survey_type_1: '事前', survey_type_2: '事中', survey_type_main: '事中' %>
 </div>
-
-<style>
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #FAFAFA;
-    font: 12pt "Tahoma";
-}
-* {
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-}
-.page {
-    width: 21cm;
-    min-height: 29.7cm;
-    padding: 1cm 0.2cm 1cm 1.8cm;  /*上　右　下　左*/
-    margin: 1cm auto;
-    border: 1px #D3D3D3 solid;
-    border-radius: 5px;
-    background: white;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-.subpage {
-    padding: 1cm;
-    //border: 5px red solid;
-    height: 256mm;
-    //outline: 2cm #FFEAEA solid;
-}
-.post-img {
-  width: 100%;
-  position: relative;
-  font-size: 9px;
-}
-.post-img > img {
-  width: 100%;
-}
-.post-img > .wb_left_top {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.post-img > .wb_top {
-  position: absolute;
-  top: 0;
-  left: 40%;
-}
-.post-img > .wb_right_top {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.post-img > .wb_right_down {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.post-img > .wb_down {
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-}
-.post-img > .wb_left_down {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-
-.post-img > .wb_yoko_left_top {
-  position: absolute;
-  top: 200px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_top {
-  position: absolute;
-  top: 200px;
-  left: calc(50% - 66px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_top {
-  position: absolute;
-  top: 200px;
-  right: -87px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_down {
-  position: absolute;
-  bottom: -113px;
-  right: -87px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_down {
-  position: absolute;
-  bottom: -113px;
-  left: calc(50% - 66px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_left_down {
-  position: absolute;
-  bottom: -113px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-
-@page {
-    size: A4;
-    margin: 0;
-}
-@media print {
-    .page {
-        margin: 0;
-        border: initial;
-        border-radius: initial;
-        width: initial;
-        min-height: initial;
-        box-shadow: initial;
-        background: initial;
-        page-break-after: always;
-    }
-}
-</style>
