--- a/app/views/investigations/pages/_hyoshi_resident.html.erb
+++ b/app/views/investigations/pages/_hyoshi_resident.html.erb
@@ -4,7 +4,7 @@
     <div class="hyoshi_parent text-center">
       <h1 class="investigation_construction_name"><%= @investigation.construction_name %></h1>
       <h2 class="investigation_content"><%= @investigation.content %> <%= survey_type %>調査報告書</h2>
-      <p class="investigation_content">No.<%= house.house_number %> <%= house.owner_name %> 邸</p>
+      <p class="investigation_content">No.<%= house.house_number %> <%= house.owner_name %>　様</p>
 
       <div class="investigation_footer">
         <p>調査日：
